--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv": "^17.2.1",
+    "express": "^4.18.2",
+    "mssql": "^11.0.1"
   }
 }
